fixed scrollbar for user-info and recent-post

--- a/src/app/recent-visited-post/component/recent-visited-post/recent-visited-post.component.scss
+++ b/src/app/recent-visited-post/component/recent-visited-post/recent-visited-post.component.scss
@@ -7,7 +7,7 @@
     scrollbar-gutter: stable;
     background-clip: content-box;
     box-sizing: border-box;
-    border-radius: 10px;
+    // border-radius: 10px;
     padding-right: 10px;
 }
 
